--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Create .env file from secrets
         env:
-         CLOUDINARY_URL: ${{ secrets.CLOUDINARY_URL }}
+         DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           $utf8NoBom = New-Object System.Text.UTF8Encoding $False
           $envContent = "DATABASE_URL=$env:DATABASE_URL"
