--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Create .env file from secrets
         env:
-         DATABASE_URL: ${{ secrets.DATABASE_URL }}
+         DATABASE_URL: "postgresql://nextjsdb_owner:dG0VmLMCFwc3@ep-green-water-a1p5u8zr.ap-southeast-1.aws.neon.tech/nextjsdb?sslmode=require"
         run: |
           $utf8NoBom = New-Object System.Text.UTF8Encoding $False
           $envContent = "DATABASE_URL=$env:DATABASE_URL"
