--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,9 +49,11 @@ jobs:
           POSTGRES_URL_NO_SSL=${{ secrets.POSTGRES_URL_NO_SSL }}
           POSTGRES_USER=${{ secrets.POSTGRES_USER }}
           SESSION_SECRET=${{ secrets.SESSION_SECRET }}
+          NODE_ENV=production
           "@
-            [System.IO.File]::WriteAllText(".env.local", $envContent, $utf8NoBom)
-          
+          [System.IO.File]::WriteAllText(".env.local", $envContent, $utf8NoBom)
+      
+    
       - name: Start Docker Compose
         run: docker compose --env-file .env.local --env-file .env up -d --build --remove-orphans
 
