--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,9 @@ services:
     ports:
       - "3000:3000"
     restart: always
+    volumes:
+      - ski-app:/app/public
+  volumes:
+  ski-app:
 
    
