--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,16 @@ jobs:
          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           $utf8NoBom = New-Object System.Text.UTF8Encoding $False
-          $envContent = "DATABASE_URL=$env:DATABASE_URL"
+          $envContent =@"DATABASE_URL=$env:DATABASE_URL
+          NEXT_PUBLIC_SITE_URL=${{ secrets.NEXT_PUBLIC_SITE_URL }}
+          "@
           [System.IO.File]::WriteAllText(".env", $envContent, $utf8NoBom)
       
       - name: Create .env.local file from secrets
         run: |
           $utf8NoBom = New-Object System.Text.UTF8Encoding $False
           $envContent =@"
+          NEXT_PUBLIC_SITE_URL=${{ secrets.NEXT_PUBLIC_SITE_URL }}
           AUTH_SECRET=${{ secrets.AUTH_SECRET }}
           AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}
           AUTH_URL=${{ secrets.AUTH_URL }}
