--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: .
       args:
         - RESEND_API_KEY=re_Rq6bLA4K_FxnGakKoT5WLJnS889Wpdo5J
+        - API_URL=https://go.heryheryanto.my.id
     env_file:
       - .env
       - .env.local
