--- a/.env.local
+++ b/.env.local
@@ -49,5 +49,5 @@ EMAIL_PASS="Twy2tVgn6xTzKHnnBP"
 URL="http://localhost:3000"
 
 
-# API_URL="http://localhost:8081"
-API_URL="https://go.heryheryanto.my.id"
+API_URL="http://localhost:8081"
+# API_URL="https://go.heryheryanto.my.id"
