--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^18.3.1",
     "recharts": "^2.15.1",
     "resend": "^4.2.0",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
