--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
       "esnext",
       "es6"
     ],
-    "typeRoots": ["./types", "./node_modules/@types"],
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,11 +19,13 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
-    "plugins": [{
-      "name": "next"
-    }],
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "paths": {
       "@/*": [
         "./*"
@@ -47,7 +52,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/api/login/route.ts", "app/dokumen/loading.js"
+    "app/api/login/route.ts",
+    "app/dokumen/loading.js",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
