--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint --fix",
     "postinstall": "prisma generate"
   },
   "dependencies": {
