--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint --fix",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -42,20 +41,21 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie": "^1.1.1",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.465.0",
     "moment": "^2.30.1",
     "motion": "^11.18.0",
-    "next": "^16.1.3",
+    "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
-    "react": "^19.2.3",
+    "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.2.3",
+    "react-dom": "^18.3.1",
     "recharts": "^2.15.1",
     "resend": "^4.2.0",
     "sweetalert2": "^11.26.3",
